msvc eureka and readme

--- a/microservice.church/pom.xml
+++ b/microservice.church/pom.xml
@@ -18,6 +18,7 @@
 	<modules>
 		<module>microservice.gateway</module>
 		<module>microservice.config</module>
+		<module>MicroserviceEureka</module>
 	</modules>
 
 	<properties>
